    Thanks to William Bass for the patch (LP: #365881).

  [ Evan Dandrea ]
  * Remove partially downloaded files that Windows does not consider
    files when the bit torrent tracker falls over (LP: #873268).
  * Don't assume success if the disk image download fails without
    raising an exception (LP: #924752).
  * Hide Wubi from the autorun page, per LP: #975251.

  [ Stéphane Graber ]
  * Add Edubuntu support.

  [ Colin Watson ]
  * Bump to 12.04.
  * Add Lubuntu support (LP: #907524).

 -- Evan Dandrea <ev@ubuntu.com>  Wed, 01 Feb 2012 16:31:48 +0000

wubi (11.10) oneiric; urgency=low

  [ Colin Watson ]
  * Bump to 11.10.
  * Remove Ubuntu Netbook option, which is no longer a separate CD
    (LP: #772941).
  * Switch to rootflags=sync for all filesystems.  ntfs-3g in oneiric now
    has syncio only as a compatibility synonym for sync.
  * Use grub-ntldr-img rather than our own copy of grubinst.
  * Declare --size as taking an int argument (LP: #799780).
  * Add the gzio module to the wubildr image, since normal.mod loads it
    unconditionally nowadays.
  * Remove grub-installer/bootdev_directory preseeding, only relevant for
    GRUB Legacy.

  [ Evan Dandrea ]
  * In Vista and newer versions of Windows, boot straight into the
    second stage of the installer.
  * Merge with the diskimage branch. Wubi now downloads and expands a
    ext3 disk image by default, negating the need for a second stage.
  * Update Wubi icon. Still need to figure out why it's fuzzy in the
    Windows 7 taskbar.
  * Pre-allocate the swap file in disk image installs.
  * Add unit tests to wubi.
  * Properly parse the output of 7z's iso listing (LP: #856340).
  * Removed unused Ubuntu Netbook images (symlinks).
  * Use the Plymouth splash (LP: #862007).
  * Handle filesystem corruption when trying to uninstall Wubi
    (LP: #869014).
  * Add support for disk image installation (LP: #859696). Thanks
    Jean-Baptiste Lallement!
  * Correctly define cd_path (LP: #861702).